package com.seetext.objectdetection;

/*
 * An interface to go to definition activity
 */

public interface TouchObjectCallback {
    void goToObjectDefinition(String word);
}
